dodanie do repo

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="container">
+  <h3 class="page-header">Ember Todo-app</h3>
+  {{outlet}}
+</div>
