--- a/app/components/new-task/template.hbs
+++ b/app/components/new-task/template.hbs
@@ -1,7 +1,5 @@
-<h5>Nowe zadanie</h5>
-<div class="input-group">
-   {{input value=newTask type="text" class="form-control" placeholder="wpisz nowe zadanie ..."}}
-   <span class="input-group-btn">
-     <button {{action 'addNewTask' newTask}} class="btn btn-primary" type="button">Dodaj</button>
-   </span>
- </div>
+<div class="ui right labeled fluid action input">
+  <div class="ui label">New task</div>
+  {{input value=newTask type="text" class="form-control" placeholder="wpisz nowe zadanie ..." action="addNewTask"}}
+  <button {{action 'addNewTask' newTask}} class="ui green button" type="button">Add</button>
+</div>
