--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,20 @@
-<div class="container">
-  <h3 class="page-header">Ember Todo-app</h3>
+<br>
+<div class="ui container">
+  <div class="ui large grey inverted menu">
+    <div class="item">
+      <img src="/assets/images/me.png">
+    </div>
+    <a class="active item">Ember Todo App example</a>
+    <div class="right menu">
+      <div class="item">
+        <div class="ui animated primary fade button" tabindex="0">
+          <div class="visible content">Force on Github</div>
+          <div class="hidden content">
+            <i class="github icon"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   {{outlet}}
 </div>
