fix responsive layout

--- a/app/components/tasks-list/template.hbs
+++ b/app/components/tasks-list/template.hbs
@@ -1,4 +1,4 @@
-<table class="ui celled table">
+<table class="ui celled table unstackable">
   <tbody>
     {{#each tasksList as |task|}}
       {{single-task task=task}}
