--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <br>
 <div class="ui container">
-  <div class="ui large grey inverted menu">
+  <div class="ui large grey inverted stackable menu">
     <div class="item">
       <img src="/assets/images/me.png">
     </div>
