--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,12 +7,14 @@
     <a class="active item">Ember Todo App example</a>
     <div class="right menu">
       <div class="item">
-        <div class="ui animated primary fade button" tabindex="0">
-          <div class="visible content">Force on Github</div>
-          <div class="hidden content">
-            <i class="github icon"></i>
-          </div>
+        <a href="https://github.com/ddosdor/ember-todo-app-example" target="blank">
+          <div class="ui animated primary fade button" tabindex="0">
+            <div class="visible content">Github</div>
+            <div class="hidden content">
+              <i class="github icon"></i>
+            </div>
         </div>
+        </a>
       </div>
     </div>
   </div>
